--- a/SysExLibrarian/About.xaml
+++ b/SysExLibrarian/About.xaml
@@ -1,99 +1,66 @@
-﻿<Window x:Class="SysExLibrarian.About"
+﻿<UserControl x:Class="SysExLibrarian.About"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:SysExLibrarian"
         mc:Ignorable="d"
-        Title="About" Height="277.654" Width="400" ResizeMode="NoResize" MouseLeftButtonUp="Window_MouseLeftButtonUp" WindowStartupLocation="CenterScreen" WindowStyle="None">
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{StaticResource MaterialDesignFont}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal" 
+        TextOptions.TextRenderingMode="Auto"
+        Height="220" Width="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <!-- Logo and Title -->
-        <Grid Grid.Column="0"
-			  Grid.Row="0"
-			  Margin="10">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-
-            <Image x:Name="ApplicationLogo"
-				   Grid.Column="0"
+        <Image x:Name="ApplicationLogo"
 				   Grid.Row="0"
 				   Width="42"
 				   Height="42" />
-            <Label x:Name="Title"
-				   Grid.Column="1"
-				   Grid.Row="0"
-				   FontSize="16" />
-        </Grid>
 
+        <Label x:Name="Title"
+				   Grid.Column="0"
+				   Grid.Row="0" Margin="0 25 0 5" HorizontalAlignment="Center"
+				   FontSize="18" Content="SysEx Librarian" />
         <!-- Description -->
         <TextBlock x:Name="Description"
 				   Grid.Column="0"
-				   Grid.Row="1"
+				   Grid.Row="2"
 				   Margin="10,0,10,0"
 				   TextWrapping="Wrap"
 				   Text="{Binding Description}"/>
 
         <!-- Version -->
-        <Grid Grid.Column="0"
-			  Grid.Row="2"
-			  Margin="10">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
+        <Label x:Name="Version"
+				   Grid.Column="0" HorizontalAlignment="Center"
+				   Grid.Row="2" FontSize="13" Content="0.1.0" Margin="0 0 0 10"/>
+        
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="3">
+            <Button Style="{StaticResource MaterialDesignFloatingActionMiniButton}"  
+                    Margin="0 0 8 0" HorizontalAlignment="Left"
+                    ToolTip="GitHub">
+                <materialDesign:PackIcon Kind="GithubCircle" Height="24" Width="24" />
+            </Button>
+            <Button x:Name="RecordButton" Style="{StaticResource MaterialDesignFloatingActionMiniButton}"  
+                    Margin="0 0 8 0" HorizontalAlignment="Left"
+                    ToolTip="Reddit">
+                <materialDesign:PackIcon Kind="Reddit" Height="24" Width="24" />
+            </Button>
+        </StackPanel>
 
-            <TextBlock Grid.Column="0"
-					   Grid.Row="0"
-					   VerticalAlignment="Center"
-					   Text="Version: " />
-            <Label x:Name="Version"
-				   Grid.Column="1"
-				   Grid.Row="0" />
-        </Grid>
-
-        <!-- Publisher -->
-        <Grid Grid.Column="0"
-			  Grid.Row="3"
-			  Margin="10, 20">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-
-            <TextBlock x:Name="Copyright"
-					   Grid.Column="0"
-					   Grid.Row="0"
-					   Margin="5,2,0,0" />
-            <Label Grid.Column="0"
-				   Grid.Row="1">
-                <Hyperlink x:Name="Hyperlink"
-						   RequestNavigate="Link_RequestNavigate"
-						   NavigateUri="{Binding Hyperlink}">
-                    <TextBlock x:Name="HyperlinkText"
-							   Text="{Binding HyperlinkText}"/>
-                </Hyperlink>
-            </Label>
-        </Grid>
-
-        <!-- Additional Notes -->
-        <TextBlock x:Name="AdditionalNotes"
-				   Grid.Column="0"
-				   Grid.Row="4"
-				   Margin="10,0,10,10"
-				   TextWrapping="Wrap" />
+        <Button IsCancel="True" Margin="8 0 8 0"  Grid.Row="4" Style="{DynamicResource MaterialDesignFlatButton}"
+                    Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}">
+            OK
+        </Button>
     </Grid>
-</Window>
+</UserControl>
