--- a/SysExLibrarian/MainWindow.xaml
+++ b/SysExLibrarian/MainWindow.xaml
@@ -19,17 +19,13 @@
     <materialDesign:DialogHost Identifier="RootDialog">
         <Grid VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="641*"/>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" MinHeight="200"/>
-                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <DockPanel Grid.ColumnSpan="3" Grid.Row="0">
                 <Menu DockPanel.Dock="Top" IsMainMenu="True" Style="{StaticResource SysExLibMenu}">
@@ -41,14 +37,41 @@
                         </MenuItem>
                     </MenuItem>
                     <MenuItem Header="_Edit">
+                        <MenuItem Header="_Cut" Command="Cut">
+                            <MenuItem.Icon>
+                                <materialDesign:PackIcon Kind="ContentCut" />
+                            </MenuItem.Icon>
+                        </MenuItem>
+                        <MenuItem Header="_Copy" Command="Copy">
+                            <MenuItem.Icon>
+                                <materialDesign:PackIcon Kind="ContentCopy" />
+                            </MenuItem.Icon>
+                        </MenuItem>
+                        <MenuItem Header="_Paste" Command="Paste">
+                            <MenuItem.Icon>
+                                <materialDesign:PackIcon Kind="ContentPaste" />
+                            </MenuItem.Icon>
+                        </MenuItem>
                         <MenuItem Header="_Rename" x:Name="RenameMenuItem" IsEnabled="False" Click="RenameMenuItem_Click">
                             <MenuItem.Icon>
                                 <materialDesign:PackIcon Kind="RenameBox" />
                             </MenuItem.Icon>
                         </MenuItem>
+                        <MenuItem Header="_Delete" x:Name="DeleteFileMenuItem" IsEnabled="False" Click="DeleteFileMenuItem_Click">
+                            <MenuItem.Icon>
+                                <materialDesign:PackIcon Kind="Delete" />
+                            </MenuItem.Icon>
+                        </MenuItem>
+                    </MenuItem>
+                    <MenuItem Header="_View">
                         <MenuItem Header="_Show SysEx File" x:Name="ShowSysExFileMenuItem" IsEnabled="False" Click="ShowSysExFileMenuItem_Click">
                             <MenuItem.Icon>
                                 <materialDesign:PackIcon Kind="FileImport" />
+                            </MenuItem.Icon>
+                        </MenuItem>
+                        <MenuItem Header="_Show Contents">
+                            <MenuItem.Icon>
+                                <materialDesign:PackIcon Kind="File" />
                             </MenuItem.Icon>
                         </MenuItem>
                     </MenuItem>
@@ -57,41 +80,50 @@
                     </MenuItem>
                 </Menu>
             </DockPanel>
-            <ComboBox x:Name="MidiOutputComboBox" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0" Width="400" IsReadOnly="true" materialDesign:HintAssist.Hint="Destination MIDI port" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"/>
-            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="3" VerticalAlignment="Top">
-                <Button x:Name="SendButton" Style="{StaticResource MaterialDesignFloatingActionMiniButton}"  
+            <ComboBox x:Name="MidiOutputComboBox" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,0,0,0" Width="400" IsReadOnly="true" materialDesign:HintAssist.Hint="Destination MIDI port" Grid.Row="1" Grid.Column="0" />
+            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1" VerticalAlignment="Top">
+                <Button x:Name="SendButton" Style="{StaticResource MaterialDesignFlatButton}"
                     Margin="0 0 8 0" HorizontalAlignment="Left"
                     ToolTip="Send">
                     <materialDesign:PackIcon Kind="Upload" Height="24" Width="24" />
                 </Button>
-                <Button x:Name="RecordButton" Style="{StaticResource MaterialDesignFloatingActionMiniButton}"  
-                    Margin="0 0 8 0" HorizontalAlignment="Left"
-                    ToolTip="Record" Click="RecordButton_Click">
-                    <materialDesign:PackIcon Kind="Record" Height="24" Width="24" />
-                </Button>
             </StackPanel>
             <DataGrid x:Name="SysExFilesDataGrid" RowHeaderWidth="0" CanUserAddRows="False" Margin="10" CanUserDeleteRows="False" AutoGenerateColumns="False" 
-                  HorizontalAlignment="Left" Grid.ColumnSpan="4" Grid.Row="2" 
+                  HorizontalAlignment="Left" Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Stretch"
+                  Height="{Binding ActualHeight, RelativeSource ={RelativeSource AncestorType = {x:Type Window}}}"
                   SelectionChanged="SysExFilesListView_SelectionChanged" CellEditEnding="SysExFilesDataGrid_CellEditEnding" CurrentCellChanged="SysExFilesDataGrid_CurrentCellChanged" >
                 <DataGrid.Columns>
+                    <DataGridCheckBoxColumn Binding="{Binding IsSelected}" 
+                                                ElementStyle="{StaticResource MaterialDesignDataGridCheckBoxColumnStyle}"
+                                                EditingElementStyle="{StaticResource MaterialDesignDataGridCheckBoxColumnEditingStyle}">
+                        <DataGridCheckBoxColumn.Header>
+                            <!--padding to allow hit test to pass thru for sorting -->
+                            <Border Background="Transparent" Padding="6 0 6 0" HorizontalAlignment="Center">
+                                <CheckBox HorizontalAlignment="Center" Margin="5 0 0 0"                                            
+                                              DataContext="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}, Path=DataContext}"
+                                              IsChecked="{Binding IsAllItems3Selected}" />
+                            </Border>
+                        </DataGridCheckBoxColumn.Header>
+                    </DataGridCheckBoxColumn>
                     <DataGridTextColumn Binding="{Binding FileName}" ClipboardContentBinding="{x:Null}" Header="Sysex File" Width="475"/>
-                    <DataGridTextColumn Binding="{Binding Manufacturer}" ClipboardContentBinding="{x:Null}" Header="Manufacturer" IsReadOnly="True" Width="200"/>
+                    <DataGridTextColumn Binding="{Binding Manufacturer}" ClipboardContentBinding="{x:Null}" Header="Manufacturer" IsReadOnly="True" Width="180"/>
                     <DataGridTextColumn Binding="{Binding Path=Size, Mode=OneWay, Converter={StaticResource FileSizeConverter}}" IsReadOnly="True" ClipboardContentBinding="{x:Null}" Header="Size" Width="*"/>
                 </DataGrid.Columns>
             </DataGrid>
-            <StackPanel  Grid.Row="3" Grid.Column="0" Orientation="Horizontal" Margin="10 0 0 0">
-                <Button x:Name="AddFileButton" Style="{StaticResource MaterialDesignFloatingActionMiniButton}"  
-                        Margin="0 0 8 0" HorizontalAlignment="Left" Click="AddFileButton_Click"
-                        ToolTip="Add file">
-                    <materialDesign:PackIcon Kind="Plus" Height="24" Width="24" />
-                </Button>
-                <Button x:Name="RemoveFileButton" IsEnabled="False" Style="{StaticResource MaterialDesignFloatingActionMiniButton}" 
-                        Margin="0 0 8 0" HorizontalAlignment="Left" Click="RemoveFileButton_Click"
-                        ToolTip="Remove file">
-                    <materialDesign:PackIcon Kind="Minus" Height="24" Width="24" />
-                </Button>
-            </StackPanel>
-            <Button x:Name="ContentsButton" Content="Contents" HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.Row="3" Grid.Column="3" Margin="0,0,10,0" />
+            <materialDesign:PopupBox Style="{StaticResource MaterialDesignMultiFloatingActionPopupBox}" Grid.Row="2" Grid.Column="1" 
+                                     HorizontalAlignment="Right" VerticalAlignment="Bottom"
+                                     Margin="32">
+                <StackPanel>
+                    <Button x:Name="RecordButton" ToolTip="Record sysex" Click="RecordButton_Click" Background="{DynamicResource PrimaryHueMidBrush}"
+                        Foreground="{DynamicResource PrimaryHueMidForegroundBrush}">
+                        <materialDesign:PackIcon Kind="Record" />
+                    </Button>
+                    <Button ToolTip="Add file" Click="AddFileButton_Click" Background="{DynamicResource PrimaryHueMidBrush}"
+                        Foreground="{DynamicResource PrimaryHueMidForegroundBrush}">
+                        <materialDesign:PackIcon Kind="File" Height="20" Width="20" />
+                    </Button>
+                </StackPanel>
+            </materialDesign:PopupBox>
         </Grid>
     </materialDesign:DialogHost>
 </Window>
