--- a/SysExLibrarian/About.xaml
+++ b/SysExLibrarian/About.xaml
@@ -12,7 +12,7 @@
         TextElement.FontSize="13"
         TextOptions.TextFormattingMode="Ideal" 
         TextOptions.TextRenderingMode="Auto"
-        Height="220" Width="400">
+        Height="380" Width="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -24,37 +24,35 @@
 
         <!-- Logo and Title -->
         <Image x:Name="ApplicationLogo"
-				   Grid.Row="0"
-				   Width="42"
-				   Height="42" />
+				   Grid.Row="0" Margin="0 25 0 0 "
+				   Width="115"
+				   Height="115" />
 
         <Label x:Name="Title"
 				   Grid.Column="0"
-				   Grid.Row="0" Margin="0 25 0 5" HorizontalAlignment="Center"
-				   FontSize="18" Content="SysEx Librarian" />
-        <!-- Description -->
-        <TextBlock x:Name="Description"
-				   Grid.Column="0"
-				   Grid.Row="2"
-				   Margin="10,0,10,0"
-				   TextWrapping="Wrap"
-				   Text="{Binding Description}"/>
-
+				   Grid.Row="1" Margin="0 15 0 0" HorizontalAlignment="Center"
+				   FontSize="24" Content="SysEx Librarian" />
+       
         <!-- Version -->
-        <Label x:Name="Version"
-				   Grid.Column="0" HorizontalAlignment="Center"
-				   Grid.Row="2" FontSize="13" Content="0.1.0" Margin="0 0 0 10"/>
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 0 0 30">
+            <Label HorizontalAlignment="Center" FontSize="16" Content="Version" Margin="0" FontWeight="Medium" />
+            <Label x:Name="Version" HorizontalAlignment="Center" FontSize="16" FontWeight="Medium" Content="0.1.0" Margin="0"/>
+        </StackPanel>
         
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="3">
-            <Button Style="{StaticResource MaterialDesignFloatingActionMiniButton}"  
-                    Margin="0 0 8 0" HorizontalAlignment="Left"
-                    ToolTip="GitHub">
-                <materialDesign:PackIcon Kind="GithubCircle" Height="24" Width="24" />
+            <Button Style="{StaticResource MaterialDesignFlatButton}"  
+                    Margin="0 0 8 0" HorizontalAlignment="Left" FontSize="12" Foreground="#5A91BA">
+                WEBSITE
             </Button>
-            <Button x:Name="RecordButton" Style="{StaticResource MaterialDesignFloatingActionMiniButton}"  
+            <Button Style="{StaticResource MaterialDesignFlatButton}"  
                     Margin="0 0 8 0" HorizontalAlignment="Left"
-                    ToolTip="Reddit">
-                <materialDesign:PackIcon Kind="Reddit" Height="24" Width="24" />
+                    ToolTip="Report a bug" FontSize="12" Foreground="#B06E72">
+                REPORT A BUG
+            </Button>
+            <Button Style="{StaticResource MaterialDesignFlatButton}"  
+                    Margin="0 0 8 0" HorizontalAlignment="Left"
+                    ToolTip="Credits" FontSize="12" Foreground="#7BA881">
+                CREDITS
             </Button>
         </StackPanel>
 
